appId: "org.wikipedia.alpha"

---
- stopApp: org.wikipedia.alpha
- launchApp: org.wikipedia.alpha

- tapOn:
        text: "More"

- assertVisible: "Log in / join Wikipedia"

- tapOn:
        text: "Log in / join Wikipedia"

- tapOn:
        text: "Log in"

- tapOn:
        text: "Username"

- inputText: "ravqa"

- tapOn:
        text: "Password"

- inputText: "Test0987!"

- tapOn:
        below: "Password"
        text: "Log in"
- tapOn:
          text: "More"
- assertVisible:
          text: "ravqa"
- tapOn:
          point: "50,50"