# Script to open an app and click a "Sign In" button

appId: "org.wikipedia.alpha"  # Replace with the actual package ID of your app

---
- stopApp
- launchApp
- tapOn:
    text: "Continue"
- tapOn:
    text: "Continue"
- tapOn:
    text: "Continue"
- tapOn:
    text: "Get started"
