appId: "org.wikipedia.alpha"

---

# --- Setup: Clean app state ---
- stopApp: org.wikipedia.alpha
- launchApp: org.wikipedia.alpha

# --- Step 1: Login if prompted ---
- tapOn:
      text: "More"

- runFlow:
      when:
          visible: "Log in / join Wikipedia"
      file: C:\Users\Rav\Documents\maestro\Wikipedia\Flows\Main\sign_in.yaml

# Optional: Tap off any modal or overlay
- tapOn:
      point: "50,50"

# --- Step 2: Navigate to Talk page ---
- tapOn:
      id: "org.wikipedia.alpha:id/nav_tab_more"

- tapOn:
      id: "org.wikipedia.alpha:id/main_drawer_talk_container"

# --- Step 3: Validate UI elements on Talk screen ---
- assertVisible:
      text: "User talk: Ravqa"

- assertVisible:
      id: "org.wikipedia.alpha:id/menu_notifications"

- assertVisible:
      id: "org.wikipedia.alpha:id/menu_notifications_group"

- assertVisible:
      text: "The conversation starts here"

- assertVisible:
      text: "Talk pages are where people discuss how to make Wikipedia content the best it can be. Start by adding a new discussion topic to connect and collaborate with a community of Wikipedians."

- assertVisible:
      id: "org.wikipedia.alpha:id/talkNewTopicButton"

# --- Step 4: Navigate back ---
- tapOn:
      text: "Navigate up"
